--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ django==4.2
 djangorestframework==3.14.0
 django-filter==22.1
 django-mptt==0.15.0
-Pillow>=10.0,<10.1
+pillow>=10.0,<10.1
 drf-spectacular>=0.15.1,<0.16
 django-cors-headers==4.3.1
 psycopg2==2.9.9
