--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,7 @@ django-cors-headers==4.3.1
 psycopg2==2.9.9
 python-dotenv==1.0.0
 djangorestframework-recursive
+
+django-allauth==0.52.0
+djangorestframework-simplejwt==5.2.2
+dj-rest-auth==3.0.0
