--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,12 +3,12 @@ djangorestframework==3.13.1
 django-filter==22.1
 django-mptt==0.15.0
 pillow>=10.0,<10.1
-drf-spectacular>=0.15.1,<0.16
+drf-spectacular==0.27.1
 django-cors-headers==4.3.1
 psycopg2==2.9.9
 python-dotenv==1.0.0
 djangorestframework-recursive
 
-django-allauth==0.52.0
 djangorestframework-simplejwt==5.2.2
-dj-rest-auth==3.0.0
+django-allauth==0.54.0
+dj-rest-auth==5.0.2
