--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py collectstatic --noinput &&
              python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+             daphne -b 0.0.0.0 -p 8000 config.asgi:application"
     environment:
       - DB_HOST=db
       - DB_NAME=devdb
@@ -36,20 +36,6 @@ services:
     depends_on:
       - db
 
-#  frontend:
-#    container_name: frontend
-#    build:
-#      context: ./frontend
-#    volumes:
-#      - ./frontend:/frontend
-#    ports:
-#      - "3000:3000"
-#    stdin_open: true
-#    command: npm start
-#    depends_on:
-#      - backend
-
 volumes:
   dev-db-data:
   dev-static-data:
-#  react_build:
