--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,9 +2,9 @@ upstream backend {
     server backend:8000;
 }
 
-upstream frontend {
-    server frontend:3000;
-}
+# upstream frontend {
+#     server frontend:3000;
+# }
 
 server {
     listen 80;
@@ -29,10 +29,10 @@ server {
     }
 
 
-    location / {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+#     location / {
+#         proxy_pass http://frontend;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header Host $host;
+#         proxy_redirect off;
+#     }
 }
