--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-#      - name: Test
-#        run: docker-compose run --rm backend sh -c "python manage.py wait_for_db && python manage.py test"
+      - name: Test
+        run: docker-compose run --rm backend sh -c "python manage.py wait_for_db && python manage.py test"
 
       - name: Lint
         run: chmod +x ./.github/workflows/lint.sh && ./.github/workflows/lint.sh
