chore: tag images

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,9 +7,10 @@ on:
       - completed
 
 jobs:
-  build-and-push:
+  build-push-deploy:
     runs-on: ubuntu-latest
-
+    strategy:
+      fail-fast: true
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -25,10 +26,13 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build Docker image and Push to Dockerhub
+    - name: Build, tag & push Docker images to Docker Hub
       run: |
         docker-compose -f docker-compose.prod.yml build
-        docker-compose push backend db nginx
+        docker image tag ojg1993/saven:backend backend \
+                        ojg1993/saven:nginx nginx \
+                        ojg1993/saven:db db
+        docker-compose -f docker-compose.prod.yml push backend nginx db
 
     - name: Create deployment package
       run: zip -r deploy.zip . -x '*.git*'
