--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,12 +2,13 @@ name: Deployment on AWS in docker environment
 
 on:
   workflow_run:
-    workflows: ["Unit & integration test with linting check"]
+    workflows: ["unit & integration test with linting check"]
     types:
       - completed
 
 jobs:
   build-push-deploy:
+    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.name == 'Unit & integration test with linting check' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
@@ -31,12 +32,12 @@ jobs:
 
     - name: Tag Docker images
       run: |
-        docker image tag ojg1993/saven:backend backend
-        docker image tag ojg1993/saven:nginx nginx
-        docker image tag ojg1993/saven:db db
+        docker image tag db ojg1993/saven:db
+        docker image tag backend ojg1993/saven:backend
+        docker image tag nginx ojg1993/saven:nginx
 
     - name: Push Docker images to Docker Hub
-      run: docker-compose -f docker-compose.prod.yml push db backend nginx
+      run: docker-compose -f docker-compose.prod.yml push
 
     - name: Create deployment package
       run: zip -r deploy.zip . -x '*.git*'
