--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,8 +37,8 @@ services:
     build:
       context: ./nginx
     restart: always
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     volumes:
       - static-data:/vol/static
     depends_on:
