--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,10 +24,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set docker-compose.prod for deployment
+        run: |
+          rm ./docker-compose.yml
+          touch ./docker-compose.prod.yml docker-compose.yml
+
       - name: Build & Push Docker images to Docker Hub
         run: |
-          docker-compose -f docker-compose.prod.yml build
-          docker-compose -f docker-compose.prod.yml push
+          docker-compose build
+          docker-compose push
 
 
       - name: Create deployment package
@@ -40,7 +45,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: ${{ secrets.AWS_EB_APP_NAME }}
           environment_name: ${{ secrets.AWS_EB_ENV_NAME }}
-          version_label: saven-api-server-production-test-5
+          version_label: saven-api-server-production-test-6
           region: ap-northeast-2
           use_existing_version_if_available: true
           deployment_package: deploy.zip
